syntax = "proto3";
package identities.transactions.nub;

message TransactionResponse {
  string nub_i_d = 1;
}